--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,7 @@
   "start_url": "/",
   "scope": "/",
   "display": "standalone",
+  "orientation": "landscape",
   "background_color": "#FFF",
   "theme_color": "#FFF",
   "icons": [
